2019-01-16 <kennethj@gagarin.uit.no>
    * generate_paga_persons.py: Added code to skip processing honorar persons. These can be identfied by the value 'H' in Tj.Forh

2018-12-10 <kennethj@gagarin.uit.no>
    * paga_adm2020_modify.py:   updated path of output file, it should now have the same name as the one generate_paga_persons.py generates (uit_paga_last.csv)
    * paga_adm2020_modify.py:   rewrote how we append to file. the previous version would fail if the output file is the same as the input file.
2018-12-10 <kennethj@gagarin.uit.no>
    * export_cristin.py (output_element): changed: if not attributes and (value is None or not value):
    to: if not attributes and (value is None):
    this because value == 0 triggers on "not value"
    
2018-11-28  Karen   <cerebrum@cleomedes.uit.no>

    * export_oid.py (load_cb_data): Removed co.affiliation_status_timelonnet_midlertidig 
    from aff_status_filter. This because persons with this affiliation are to have access 
    to intranett.uit.no. 


2018-11-22 <kennethj@gagarin.uit.no>
    * import_PAGA.py:   remove fix for persons with 00000 as the last part of their fnr. Although the fix needs to be implemented(to avoid these persons to get a username owned by another person), 
        we currently have no import mechanism for these persons. the fix is removed with the understanding that all new accounts generated for these kinds of persons, needs to be manually
        verified until the mechanism for importing persons withouth fnr is implemented in import_PAGA.py (that means import persons with passnr)
2018-11-22 <kennethj@gagarin.uit.no>
    * ad_export_autogroups_undervisning.py:  added missing include unicode_literals
2018-11-19 <kennethj@gagarin.uit.no>
    * populate_fronter_groups.py:   updated to handle utf-8 encoding instead of iso-8859-1
2018-11-01  <kennethj@gagarin.uit.no>
    * export_oid.py: removed utf-8 encoding on contact_value. it has already been encoded.